<resources>
    <string name="app_name">Reperibilità</string>
    <string name="select_contact">Seleziona Contatto</string>
    <string name="add_interval">Aggiungi Fascia</string>
    <string name="activate">Attiva Inoltro</string>
    <string name="deactivate">Disattiva Inoltro</string>
    <string name="schedule">Programma</string>
    <string name="phone_number">Numero</string>
    <string name="no_contact">Nessun contatto selezionato</string>
    <string name="select_start_time">Ora di inizio</string>
    <string name="select_end_time">Ora di fine</string>
    <string name="select_start_date">Data di inizio</string>
    <string name="select_end_date">Data di fine</string>
    <string name="clear_schedule">Annulla Programmazione</string>
</resources>
